Using with Capsule CRM API shows up two roadblocks to usage Issue #6
Fix problem with Base64 encoding added newlines to HTTP header with long usernames.

Add Accept header to be compatible with Capsule CRM's API.